--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prisma": "^6.2.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-select": "^5.10.0",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
