apply clean architecture principles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
             }
         ],
         "paths": {
-            "@/*": ["./*"]
+            "@/*": ["./src/*"],
+            "@core/*": ["./src/core/*"],
+            "@ui/*": ["./src/ui/*"]
         }
     },
     "ts-node": { "esm": true },
