--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "prettier": "npx prettier . --write"
+        "prettier": "npx prettier . --write",
+        "test:api": "jest test/api-test.spec.js --testEnvironment=node",
+        "test:api:watch": "jest test/api-test.spec.js --testEnvironment=node --watch"
     },
     "dependencies": {
         "@prisma/client": "^6.2.1",
+        "@testing-library/react": "^16.2.0",
+        "@types/jest": "^29.5.14",
         "dotenv": "^16.4.7",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "next": "15.1.6",
         "node-fetch": "^3.3.2",
         "prisma": "^6.2.1",
@@ -23,12 +29,15 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@swc/jest": "^0.2.37",
+        "@testing-library/jest-dom": "^6.6.3",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.1.6",
         "eslint-config-prettier": "^10.0.1",
+        "jest-fetch-mock": "^3.0.3",
         "postcss": "^8",
         "prettier": "3.4.2",
         "tailwindcss": "^3.4.1",
